--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,5 @@
 {% extends 'blog/index.html' %}
-{% load static wagtailcore_tags wagtailimages_tags blogapp_tags %}
+{% load static wagtailcore_tags wagtailimages_tags blog_tags %}
 
 {% block content %}
 
@@ -17,7 +17,7 @@
 				</div>
 				{% else %}
 				<div class="col-md-5 wrapthumbnail">
-					<a href="post.html">
+					<a href="{{ post.url }}">
 						<div class="thumbnail" style="background-image:url({% static 'assets/img/demopic/1.jpg' %});">
 						</div>
 					</a>
@@ -25,7 +25,7 @@
 				 {% endif %}
 				<div class="col-md-7">
 					<div class="card-block">
-						<h2 class="card-title"><a href="post.html">{{ post.title|truncatewords:15 }}</a></h2>
+						<h2 class="card-title"><a href="{{ post.url }}">{{ post.title|truncatewords:15 }}</a></h2>
 						{% for block in post.body %}
 						{% if block.block_type == 'paragraph' %}
 							<h4 class="card-text">{{ block.value|richtext|safe|truncatewords:10 }}</h4>
@@ -33,14 +33,10 @@
 						{% endfor %}
 						<div class="metafooter">
 							<div class="wrapfooter">
-								<span class="meta-footer-thumb">
-								<a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
-								</span>
 								<span class="author-meta">
-								<span class="post-name"><a href="author.html">Sal</a></span><br/>
 								<span class="post-date">{{ post.post_date }}</span><span class="dot"></span><span class="post-read">6 min read</span>
 								</span>
-								<span class="post-read-more"><a href="post.html" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+								<span class="post-read-more"><a href="{{ post.url }}" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
 							</div>
 						</div>
 					</div>
@@ -48,13 +44,16 @@
 			</div>
 		</div>
   {% endfor %}
-</div>
+ </div>
+ 
+ <div class="container">
+ <div class="row">
+ <div class="col-12 mt-5">
 
   {# Pagination #}
   {# https://docs.djangoproject.com/en/4.0/topics/pagination/#paginating-a-listview #}
 
-  <nav aria-label="Page navigation">
-    <ul class="flex pl-0 rounded list-none flex-wrap">
+<div class="pagination justify-content-center mt-3 mb-3 text-blue-500 dark:text-white inline-block py-2 px-4 bg-white  border border-gray-300 rounded-r-lg hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:border-gray-500 dark:hover:bg-blue-500 dark:hover:text-white">
 
       {% if posts.has_previous %}
         <li>
@@ -63,30 +62,29 @@
             Previous
           </a>
         </li>
-      {% else %}
-        <li>
-          <a href="#" class="pointer-events-none text-gray-300 inline-block py-2 px-4 bg-white  border border-gray-300 border-r-0 rounded-l-lg hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:border-gray-500 dark:hover:bg-blue-500 dark:hover:text-white">
-            Previous
-          </a>
-        </li>
+        
       {% endif %}
+	  
+	  {% for page_num in posts.paginator.page_range %}
+		<li class="page-item {% if page_num == posts.number %} active{% endif %}">
+		<a href="{% url_replace request page=page_num %}" class="page-link">
+		{{ page_num }}
+		</a>
+		</li>
+		{% endfor %}
 
       {% if posts.has_next %}
         <li>
-          <a href="{% url_replace request page=posts.next_page_number %}"
+          <a href="{% url_replace request page=posts.next_page_number %}" 
              class="text-blue-500 dark:text-white inline-block py-2 px-4 bg-white  border border-gray-300 rounded-r-lg hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:border-gray-500 dark:hover:bg-blue-500 dark:hover:text-white">
             Next
           </a>
         </li>
-      {% else %}
-        <li>
-          <a href="#" class="pointer-events-none text-gray-300 inline-block py-2 px-4 bg-white  border border-gray-300 rounded-r-lg hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:border-gray-500 dark:hover:bg-blue-500 dark:hover:text-white">
-            Next
-          </a>
-        </li>
       {% endif %}
-
-    </ul>
-  </nav>
+  
+ </div>
+ </div>
+ </div>
+ </div>
   
   {% endblock content %}
