--- a/sportsblog/templates/sportsblog/blog.html
+++ b/sportsblog/templates/sportsblog/blog.html
@@ -22,7 +22,7 @@
                                     href="{{ post.url }}">{{ post.get_parent.specific.title|title }}</a>
                                 <a class="text-white" href="">{{ post.first_published_at }}</a>
                             </div>
-                            <a class="h2 m-0 text-white text-uppercase font-weight-bold" href="">{{ post.title }}</a>
+                            <a class="h2 m-0 text-white text-uppercase font-weight-bold" href="{{ post.url }}">{{ post.title }}</a>
                         </div>
                     </div>
 					
@@ -45,10 +45,10 @@
                             <div class="overlay">
                                 <div class="mb-2">
                                     <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                        href="">{{ post.get_parent.specific.title|title }}</a>
+                                        href="{{ post.url }}">{{ post.get_parent.specific.title|title }}</a>
                                     <a class="text-white" href=""><small>{{ post.first_published_at }}</small></a>
                                 </div>
-                                <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="">{{ post.title }}</a>
+                                <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="{{ post.url }}">{{ post.title }}</a>
                             </div>
                         </div>
                     </div>
@@ -61,74 +61,9 @@
     </div>
     <!-- Main News Slider End -->
 
+{% include 'sportsblog/include/topics.html' %}
 
-{% if featured_posts %}
-    <!-- Featured News Slider Start -->
-    <div class="container-fluid pt-5 mb-3">
-        <div class="container">
-            <div class="section-title">
-                <h4 class="m-0 text-uppercase font-weight-bold">Featured News</h4>
-            </div>
-			
-            <div class="owl-carousel news-carousel carousel-item-4 position-relative">
-			
-			{% for post in featured_posts %}
-                <div class="position-relative overflow-hidden" style="height: 300px;">
-				{% image post.image original as banner %}
-                    <img class="img-fluid h-100" src="{{ banner.url }}" alt="{{ banner.alt }}" style="object-fit: cover;">
-                    <div class="overlay">
-                        <div class="mb-2">
-                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                href="">{{ post.get_parent.specific.title|title }}</a>
-                            <a class="text-white" href=""><small>{{ post.first_published_at }}</small></a>
-                        </div>
-                        <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="">{{ post.title }}</a>
-                    </div>
-                </div>
-			{% endfor %}
-				
-            </div>
-			
-        </div>
-    </div>
-    <!-- Featured News Slider End -->
-{% endif %}
-
-<div class="container-fluid pt-5 mb-3">
-    <div class="container"> 
-		<div class="row">
-{% for category in categories %}
- <div class="col-12">
-		<div class="section-title">
-			<h4 class="m-0 text-uppercase font-weight-bold">{{ category.title }}</h4>
-			 <a class="text-secondary font-weight-medium text-decoration-none" href="{{ category.url }}">View All</a>
-		</div>
-</div>
-		{% for post in category.get_children %}
-					<div class="col-lg-6">
-                            <div class="position-relative mb-3">
-							{% image post.specific.image original as post_image %}
-                                 <a href="{{ post.url }}">
-									<img class="img-fluid w-100" src="{{ post_image.url }}" alt="{{ post.title }}" style="object-fit: cover;">
-								</a>
-                                <div class="bg-white border border-top-0 p-4">
-                                    <div class="mb-2">
-                                        <a class="text-body" href="{{ post.url }}"><small>{{ post.first_published_at }}</small></a>
-                                    </div>
-                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="{{ post.url }}">{{ post.title }}</a>
-									{% for block in post.body %}
-										{% if block.block_type == 'paragraph' %}
-											bbbb<div class="mb-4 pb-2">{{block.value.paragraph|richtext|safe|truncatewords:30}}</div>
-										{% endif %}
-									{% endfor %}
-                                </div>
-                            </div>
-                        </div>
-		{% endfor %}
-{% endfor %}
-	</div>
-	</div>
-	</div>
+{% include 'sportsblog/include/posts.html' %}
 
 
 {% endblock content %}
