--- a/sportsblog/templates/sportsblog/blog_detail.html
+++ b/sportsblog/templates/sportsblog/blog_detail.html
@@ -39,71 +39,41 @@
                                 <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
                                     href="{{ page.get_parent.url }}">{{ page.get_parent.specific.title|title }}</a>
 								{% endif %}
-                                <a class="text-body" href="">{{ page.first_published_at }}</a>
+                                {{ page.first_published_at|date:'N. dS, Y' }}
                             </div>
                             <h1 class="mb-3 text-secondary text-uppercase font-weight-bold">{{ page.title }}</h1>
 							<div>{{ page.body }}</div>
+							{% with tags=page.tags.all %}
+    {% if tags %}
+			<div class="mb-3">
+            {% for tag in tags %}
+			<a href="{% slugurl 'tags' %}?tag={{ tag }}" class="btn btn-sm btn-outline-secondary m-1">{{ tag|title}}</a>
+            {% endfor %}
+			</div>
+    {% endif %}
+{% endwith %}
                         </div>
                     </div>
                     <!-- News Detail End -->
 					
 					<!-- Begin Tags -->
-			{% with tags=page.tags.all %}
-    {% if tags %}
-        <div class="mb-3">
-                        <div class="section-title mb-0">
-                            <h4 class="m-0 text-uppercase font-weight-bold">Tags</h4>
-                        </div>
-                        <div class="bg-white border border-top-0 p-3">
-                            <div class="d-flex flex-wrap m-n1">
-            {% for tag in tags %}
-			<a href="{% slugurl 'tags' %}?tag={{ tag }}" class="btn btn-sm btn-outline-secondary m-1">{{ tag|title}}</a>
-            {% endfor %}
+			
 
-        </div>
-    </div>
-    </div>
-    {% endif %}
-{% endwith %}
+
 				</div>
 
                 <div class="col-lg-4">
-					{% if entries %}
-					<div class="section-title mb-3">
-                            <h4 class="m-0 text-uppercase font-weight-bold">More</h4>
-                        </div>
-					<div class="row">
-						{% for entry in entries %}
-                    <!-- Popular News Start -->
-                    <div class="mb-3">
-                        <div class="bg-white border border-top-0">
-                            <div class="d-flex align-items-center bg-white mb-3">
-							<div class="col-4">
-							{% image entry.image original as banner %}
-                                <img class="img-fluid" src="{{ banner.url }}" alt="{{ entry.title|truncatewords:10 }}">
-							</div>
-							<div class="col-8">
-                                <div class="">
-                                    <div class="mb-2">
-                                        <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">{{ entry.get_parent.specific.title|title }}</a>
-                                        <a class="text-body" href=""><small>{{ entry.first_published_at }}</small></a>
-                                    </div>
-                                    <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">{{ entry.title }}</a>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Popular News End -->
-					{% endfor %}
-					{% endif %}
-                </div>
 				</div>
-				
 				
             </div>
     </div>
     <!-- News With Sidebar End -->
+	{% include 'sportsblog/include/additional_blog_posts.html' %}
+	
+	{% comment %}
+	{% include 'sportsblog/include/more_posts.html' %}
+	{% endcomment %}
+
 
 
 
