--- a/sportsblog/templates/sportsblog/blog_listing_page.html
+++ b/sportsblog/templates/sportsblog/blog_listing_page.html
@@ -4,29 +4,34 @@
 
 {% block content %}
 
+<div class="position-relative overflow-hidden" style="height: 500px;">
+					{% image page.image original as banner %}
+                        <img class="img-fluid h-100" src="{{ banner.url }}" alt="{{ banner.alt }}">
+                        <div class="overlay">
+                            <h2 class=" m-0 text-white text-uppercase font-weight-bold">{{ page.title }}</h2>
+                        </div>
+                    </div>
+
 <div class="container-fluid mt-5 pt-3">
         <div class="container">
             <div class="row">
 			
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-12">
-                            <div class="section-title">
-                                <h4 class="m-0 text-uppercase font-weight-bold">{{ page.title|title }}</h4>
-                            </div>
-                        </div>
 						
 						{% if posts %}
 						{% for post in posts %}
 						<div class="col-lg-6">
                             <div class="position-relative mb-3">
 							{% image post.specific.image original as post_image %}
+							<a href="{{ post.url }}" style="text-decoration: none;">
                                 <img class="img-fluid w-100" src="{{ post_image.url }}" alt="{{ post.title }}" style="object-fit: cover;">
                                 <div class="bg-white border border-top-0 p-4">
                                     <div class="mb-2">
-                                        <a class="text-body" href="{{ post.url }}"><small>{{ post.first_published_at }}</small></a>
+                                       <small class="text-body">{{ post.first_published_at }}</small>
                                     </div>
-                                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="{{ post.url }}">{{ post.title }}</a>
+                                    <div class="h4 d-block mb-3 text-secondary font-weight-bold">{{ post.title }}</div>
+							</a>
 									{% for block in post.body %}
 										{% if block.block_type == 'paragraph' %}
 											bbbb<div class="mb-4 pb-2">{{block.value.paragraph|richtext|safe|truncatewords:30}}</div>
