--- a/sportsblog/templates/sportsblog/include/posts.html
+++ b/sportsblog/templates/sportsblog/include/posts.html
@@ -1,43 +1,35 @@
-{% extends 'sportsblog/base.html' %}
 {% load wagtailcore_tags wagtailimages_tags %}
-
-{% block content %}
 
 <div class="container">
 <div class="row mt-5">
 	<div class="col-12">
-    {% if request.GET.tag %}
-        <h1 class="mt-3">Showing blog posts tagged: {{ request.GET.tag|title }}</h1>
-    {% endif %}
 
     {% for post in posts %}
-		  
+	
 	<div class="p-3 bg-body rounded">
-		<a href="{% pageurl post %}" style="text-decoration: none;">
-	<div class="card">
-	<div class="row g-0">
+		<a href="{{ post.url }}" style="text-decoration: none;">
 	
 	
-	<div class="col-sm-4">
+	
+	<div class="row">	
+	
+	<div class="col-4">
 		{% image post.image original as banner %}
 		<img src="{{ banner.url }}" class="img-fluid" alt="{{ banner.alt }}">
 	</div>
 	
-	<div class="col-sm-8">
-		<div class="card-body">
+	<div class="col-8">
 			<small class="text-muted">{{ post.latest_revision_created_at }}</small>
-			<h2 class="card-title">{{ post.title|title|truncatewords:15 }}</h2>
+			<h2>{{ post.title|title|truncatewords:15 }}</h2>
 			<p class="card-text"></p>
 		</div>
 	</div>
+	</a>
+	</div>
 	
-	</div>
-	</div>
-		</a>
-	</div>
 
-    {% empty %}
-      <h1 class="mt-3">  No pages found with this tag</h1>
+		
+
     {% endfor %}
 	
 	{% if posts.paginator.num_pages > 1 %}
@@ -64,7 +56,6 @@
 					{% if posts.has_next %}
 						<li class="page-item">
 							<a href="?page={{ posts.next_page_number }}" class="page-link">
-							{% slugurl 'tags' %}?tag={{ tag }}
 							<span>&raquo;</span>
 							</a>
 						</li>
@@ -80,7 +71,3 @@
 	</div>
 	</div>
 	</div>
-
-
-
-{% endblock content %}
