--- a/sportsblog/templates/sportsblog/search.html
+++ b/sportsblog/templates/sportsblog/search.html
@@ -6,7 +6,11 @@
 {% block title %}Search{% endblock %}
 
 {% block content %}
+<div class="container">
+<div class="row mt-5">
+<div class="col-12">
 <h1>Search</h1>
+</div>
 
 {% if search_results %}
 <ul>
@@ -30,4 +34,6 @@
 {% elif search_query %}
 No results found
 {% endif %}
+</div>
+</div>
 {% endblock %}
